--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,46 @@
     margin: 0;
 }
 
+.flex{
+    display: flex;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.float-left{
+    float: left;
+}
+
+.float-right{
+    float: right;
+}
+
 .container{
     width: 100vw;
     height: 100vh;
     background-color: aqua;
+}
+
+.main-middle{
+    justify-content: flex-end;
+}
+
+.buy{
+    height: 7vh;
+    width: 90vw;
+    background-color: red;  
+}
+
+.main-side{
+    justify-content: flex-start;
+}
+
+.nav-section-left{
+    width: 10vw;
+    height: 95vh;
+    background-color: blue;
 }
