--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 .buy{
     height: 7vh;
-    width: 90vw;
+    width: 85vw;
     background-color: red;  
 }
 
@@ -43,7 +43,23 @@
 }
 
 .nav-section-left{
-    width: 10vw;
-    height: 95vh;
+    width: 15vw;
+    height: 93vh;
     background-color: blue;
+}
+
+.content{
+    width: 85vw;
+    height: 86vh;
+    background-color: violet;
+}
+
+.bottom-player{
+    width: 100vw;
+    height: 7vh;
+    background-color: greenyellow;
+}
+
+.player{
+
 }
