--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
 main{
     height: calc(100vh - 90px);
     display: flex;
+    overflow: hidden;
 }
 
 footer{
     height: 90px;
     align-items: center;
     justify-content: space-between;
-    background-color: black;
+    background-color: #282828;
 }
 
 i{
@@ -46,18 +47,19 @@ h2, h3{
     background-color: rgb(0, 0, 0);
     height: 100%;
     overflow: hidden;
+    min-height: 500px;
 }
 
 .col-right{
     width: calc(100% - 220px);
-    background-color: BLACK;
+    background-color: #141922;
     height: 100%;
     overflow: hidden;
 }
 
 #top-ad{
     width: 100%;
-    background-color: rgba(0, 0, 0, .4);
+    background-color: #080b12;
     height: 80px;
 }
 
@@ -135,23 +137,30 @@ h2, h3{
 }
 
 .music-options{
-    width: 50%;
+    width: 60%;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 30px;
-    padding-bottom: 3rem;
+    padding: 3rem 0;
+}
+
+.option{
+    padding-bottom: 1.5rem;
 }
 
 .option > a{
     text-decoration: none;
     color: white;
+    white-space: nowrap;
+    padding: 0 .5rem;
 }
 
 .container-music{
     padding: 0 3rem;
     overflow: auto;
-    height: calc(100% - 110px);
+    height: calc(100% - 110px - 3rem);
 }
 
 .container-music > p{
@@ -223,7 +232,137 @@ h2, h3{
     color: white;
 }
 
-#active-left{
+@media screen and (min-width: 1200px) and (max-width: 1400px){
+
+    .card{
+        min-width: 20%;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px){
+    .music-options{
+        width: 80%;
+        flex-wrap: wrap;
+        padding-bottom: 5rem;
+    }
+
+    .card{
+        min-width: 20%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px){
+    .music-options{
+        width: 80%;
+        flex-wrap: wrap;
+        padding-bottom: 5rem;
+    }
+
+    .card{
+        min-width: 40%;
+    }
+
+    .song-info{
+        min-width: 250px;
+    }
+
+    .audio-settings{
+        min-width: 250px;
+    }
+
+    .top-plater{
+        width: 60%;
+    }
+
+    #heart-folder{
+        flex-direction: column;
+    }
+} 
+
+#logo-small{
+    display: none;
+}
+
+@media screen and (max-width: 767px){
+    .music-options{
+        width: 80%;
+        flex-wrap: wrap;
+        padding-bottom: 5rem;
+        min-width: 500px;
+    }
+
+    .card{
+        min-width: 220px;
+    }
+
+    .song-info{
+        min-width: 250px;
+    }
+
+    .audio-settings{
+        min-width: 250px;
+    }
+
+    .top-plater{
+        width: 60%;
+    }
+
+    #heart-folder{
+        flex-direction: column;
+    }
+
+    #logo, .playlist-list, .col-left span, hr, .col-left p, .col-left i{
+        display: none;
+    }
+
+    #logo-small{
+        display: block;
+    }
+
+    .col-left{
+        width: 60px;
+    }
+
+    .col-right{
+        width: calc(100% - 60px);
+    }
+
+    .col-left img{
+        width: 30px;
+    }
+
+    .nav-menu div{
+        border-left: none;
+    }
+
+    .nav-menu{
+        padding-top: 0;
+    }
+
+    .account > .flex{
+        padding: 0;
+    }
+
+    .account > div{
+        justify-content: center;
+    }
+
+    .account > div > img{
+        width: 50%;
+    }
+
+    .container-music{
+        min-width: 675px;
+    }
+
+    footer{
+        min-width: 675px;
+    }
+} 
+
+
+
+.active-left{
     border-left: .2em solid #adff2f;
     padding-left: .8em;
     color: white;
@@ -274,4 +413,8 @@ h2, h3{
     width: 15%;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .6);
+}
+
+#heart-folder > i{
+    padding: .2rem;
 }
